--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,6 +1,8 @@
-.works__container {
-
+.works {
+    margin-top: 140px;
 }
+
+
 
 .works__main {
     display: flex;
@@ -48,4 +50,8 @@
 
 .works__desc-text {
     margin-top: 50px;
+
+    p{
+        opacity: .4;
+    }
 }
