--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -64,7 +64,8 @@ body {
 }
 
 .triangle {
-  clip-path: polygon(0% 0%, 50% 150px, 100% 0%);
+  clip-path: polygon(0% 0%, 50% 100%, 100% 0%);
+  height: 120px;
 }
 
 // tag styles reset
