--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -33,6 +33,7 @@
     font-weight: 800;
     padding: 30px 115px;
     margin-top: 60px;
+    margin-right: 100px;
     text-transform: uppercase;
     color: $white-color;
     border-top-right-radius: 5px;
