--- a/src/styles/blocks/aboutme.pcss
+++ b/src/styles/blocks/aboutme.pcss
@@ -11,11 +11,11 @@
     margin-bottom: 150px;
 }
 
-.about__left {
+.about__desc {
     width: 40%;
 }
 
-.about__right {
+.about__person {
     width: 55%;
 }
 
