--- a/src/templates/blocks/aboutme.pug
+++ b/src/templates/blocks/aboutme.pug
@@ -1,6 +1,6 @@
-section.about
+section.about#aboutme
     .container.about__container       
-        .about__left
+        .about__desc
             .user
                 .user__avatar
                     +image('content/oleksii.jpg', 'user__img')
@@ -17,7 +17,7 @@ section.about
                             td.user__title=val.title
                             td.user__value=val.value
 
-        .about__right
+        .about__person
               h4.about__prolog Привет, меня зовут
               h2.about__title Алексей Лещенко
               .about__text Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
