--- a/src/templates/blocks/header.pug
+++ b/src/templates/blocks/header.pug
@@ -1,5 +1,6 @@
 header.header
-    .favicon АЛ      
-    +nav
-    .socials
-        include socials
+    .container.header__container
+        .logo АЛ      
+        +nav
+        .socials
+            include socials
