--- a/src/templates/blocks/socials.pug
+++ b/src/templates/blocks/socials.pug
@@ -1,5 +1,5 @@
 ul.socials__list
   each social, index in ['insta', 'vk', 'github']
     li.socials__item
-      a.socials__url(href='#')
+      a.socials__link(href='#')
         +icon(social, 'social__img')
