--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -1,11 +1,18 @@
 .header {
+    
+    min-height: 150px;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+}
+
+.header__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 150px;
 }
 
-.favicon {
+.logo {
     font-size: 36px;
     font-weight: 800;
 }
