--- a/src/templates/blocks/maincontent.pug
+++ b/src/templates/blocks/maincontent.pug
@@ -3,5 +3,5 @@
       .main-content__desc Личный сайт <br/> веб разработчика
       h1.main-content__title Алексей Лещенко
   .main-content__scroll
-    .main-content__scroll-text Скролл
+    a(href="#aboutme").main-content__scroll-text Скролл
     +icon('scroll', 'main-content__scroll-icon')
