--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -28,6 +28,10 @@
     flex-direction: column;
 }
 
+.form__control {
+    display: flex;
+}
+
 .form__button {
     font-size: 18px;
     font-weight: 800;
