--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -1,9 +1,3 @@
-.slider{
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
-}
-
 .slider__pic{
     width: 100%;
     height: 100%;
@@ -23,13 +17,13 @@
     bottom: 0;
 }
 
+.slider__control {
+    align-self: flex-end;
+}
+
 .slider__button-arrow {
     width: 11px;
     height: 11px;
-}
-
-.previews {
-    
 }
 
 .previews__item {
