--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -2,19 +2,19 @@
     margin-top: 140px;
 }
 
-
-
-.works__main {
+.slider {
     display: flex;
     justify-content: space-between;
     margin-top: 100px;
 }
 
-.works__left {
-    
+.slider__visual{
+    display: flex;
+    flex-direction: column;
 }
 
-.works__right {
+
+.slider__desc {
     width: 25%;
 }
 
