--- a/src/index.pug
+++ b/src/index.pug
@@ -22,55 +22,12 @@ html(lang="ru")
               h2.title Чем я могу быть полезен вам
               p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
 
-            ul.skills
-              - 
-                var skills = [
-                  ['Front-end', ['html5', 'css3', 'javascript', 'JQuery и Vue.js']],
-                  ['Workflow', ['Git', 'terminal', 'gulp', 'webpack']],
-                ]
-              each item in skills 
-                li.skills-row
-                  h4.skills-row__title #{item[0]}
-                  ul.skills-row__list
-                    each skill in item[1]
-                      li.skills-row__item
-                        .skill
-                          svg(viewbox="0 0 200 200")
-                            circle(r="80" cx="100" cy="100" fill="none" stroke-width="12" stroke="#ccc")
-                            circle(r="80" cx="100" cy="100" fill="none" stroke-width="12" stroke="orangered" stroke-linecap="round" stroke-dasharray="226 502.4" stroke-dashoffset="-45")
-                          .skill__title #{skill}    
+            include ./templates/blocks/skills.pug
 
       section.works
         .container.works__container
           h2.works__title Мои работы
-          .slider
-            .slider__visual
-              .slider__main
-                +image('content/1.jpg', 'slider__pic', 'слайдер')
-                .slider__preview
-                  ul.previews
-                    - for (var i = 2; i < 6; i++)
-                      li.previews__item
-                        button.previes__btn
-                          +image(`content/${i}.jpg`, 'previews__pic', 'превью')
-              .slider__control
-                button(type='button').slider__button.slider__button--prev
-                  +icon('arrow-down', 'slider__button-arrow')
-                button(type='button').slider__button.slider__button--next
-                  +icon('arrow-down', 'slider__button-arrow')
-            .slider__desc  
-              .works__tags
-                - var tags = ['HTML', 'CSS', 'Javascript']
-                  ul.tags
-                    each tag in tags
-                      li.tags__item #{tag}
-              .works__text
-                h3.title Сайт школы образования
-                .works__desc-text
-                  p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                a.iconed-link
-                  +icon('link', 'iconed-link__icon')
-                  .iconed-link__text Посмотреть сайт
+          include ./templates/blocks/slider.pug
      
       .feedback-section
         section.feedbacks
@@ -80,75 +37,11 @@ html(lang="ru")
               .feedbacks__control
                 button.feedbacks__button.feedbacks__button--prev
                 button.feedbacks__button.feedbacks__button--next
-            .feedbacks-slider
-              ul.feedbacks-slider__list
-                -
-                  var feedbacks = [
-                      {
-                        "name": "Ковальчук Дмитрий",
-                        "occupation": "Основатель Loftschool",
-                        "feedback": "Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!",
-                        "picture": "dmitry.jpg"
-                      },
-                      {
-                        "name": "Владимир Сабанцев",
-                        "occupation": "Преподаватель",
-                        "feedback": "Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах",
-                        "picture": "vladimir.jpg"
-                      }
-                  ]
-
-                each feedback in feedbacks
-                  li.feedbacks-slider__item
-                    .feedback
-                      +icon('quote', 'feedback__pic')
-                      .feedback__content
-                        p.feedback__desc #{feedback.feedback}
-                        .feedback__user
-                          .user
-                            .user__img-wrapper
-                              +image(`content/${feedback.picture}`, 'user__img', 'фото пользователя')
-                            .user__details
-                              .user__name #{feedback.name}
-                              .user__job #{feedback.occupation}
+            include ./templates/blocks/feedbacks-slider.pug
         section.contact
           .container
             h2.title.title__contact Связаться со мной
-            form(action='').form
-              .form__row.form__row--first
-                .form__element
-                  label.form__label Введите ваше имя
-                    .form__control
-                      +icon('user', 'form__pic')
-                      input(type='text').form__input
-                .form__element
-                  label.form__label Введите ваш email
-                    .form__control
-                      +icon('envelope', 'form__pic')
-                      input(type='email').form__input
-              .form__row
-                .form__element
-                  label.form__label Сообщение к письму
-                    .form__control
-                      +icon('quote', 'form__pic')
-                      textarea(rows='2').form__input
-              button(type='submit').button.form__button отправить
+            include ./templates/blocks/form.pug
       
-      footer.footer
-        .container.footer__container
-          .copyrigt ©2019
-          .owner
-            .owner__desc Личный сайт веб разработчика
-            .owner__title Алексей Лещенко
-          .footer__right
-            +nav('footer--nav')
-            .footer__bottom
-              .footer__desc
-                .footer__desc-text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                .footer_socials
-                  +socials('footer--nav')
-              .footer__quote
-                .quote
-                  .qoute__text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-                  .quote__author Martin Golding
+      include ./templates/blocks/footer.pug
   
