--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -42,3 +42,61 @@
     width: 49px;
     background-color: $btn-color;
 }
+
+.works {
+    margin-top: 140px;
+}
+
+.slider {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+
+.slider__visual{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.slider__desc {
+    width: 25%;
+}
+
+.tags {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tags__item {
+    background-color: $grey-color;
+    padding: 15px 18px;
+    border-radius: 25px;
+}
+
+.works__title{
+    font-size: 36px;
+    font-weight: 800;
+}
+
+.iconed-link {
+    display: flex;
+    margin-top: 40px;
+}
+
+.iconed-link__icon {
+    width: 18px;
+    height: 18px;
+}
+
+.works__text {
+    margin-top: 50px;
+}
+
+.works__desc-text {
+    margin-top: 50px;
+
+    p{
+        opacity: .4;
+    }
+}
