--- a/src/styles/blocks/feedbacks.pcss
+++ b/src/styles/blocks/feedbacks.pcss
@@ -46,16 +46,27 @@
     justify-content: space-between;
 }
 
-.user {
-    display: flex;
-    flex-direction: column;
-}
-
-.user__img-wrapper {
+.feedback__img-wrapper {
     width: 71px;
     height: 71px;
 }
 
-.user__details {
+.feedback__details {
     margin-left: 20px;
+    margin-top: 20px;
+}
+
+.feedback__user {
+    display: flex;
+    align-items: center;
+}
+
+.feedback__name {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.feedback__job {
+    font-weight: 600;
+    opacity: .4;
 }
