--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -37,7 +37,7 @@
     font-weight: 800;
     padding: 30px 115px;
     margin-top: 60px;
-    margin-right: 100px;
+    margin-bottom: 130px;
     text-transform: uppercase;
     color: $white-color;
     border-top-right-radius: 5px;
