--- a/src/styles/blocks/service.pcss
+++ b/src/styles/blocks/service.pcss
@@ -3,6 +3,8 @@
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 500px auto ;
+    padding-top: 150px;
+    padding-bottom: 85px;
 }
 
 .service__container {
@@ -14,7 +16,6 @@
 
 .service__desc {
     width: 60%;
-    margin-top: 150px;
 
     p {
         margin-top: 60px;
