--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -40,8 +40,8 @@
 
     &__circle{
         &--under{
-            stroke: #423d3c;
-            stroke-width: 3px;
+            stroke: $grey-color;
+            stroke-width: 7px;
         }
         &--above{
             stroke-width: 13px;
