--- a/src/styles/blocks/aboutme.pcss
+++ b/src/styles/blocks/aboutme.pcss
@@ -1,6 +1,7 @@
 .about {
     display: flex;
-    margin-top: 170px;
+    padding-top: 170px;
+    
 }
 
 .about__container {
@@ -8,7 +9,7 @@
     align-items: flex-start;
     justify-content: space-around;
     width: 70%;
-    margin-bottom: 150px;
+    padding-bottom: 150px;
 }
 
 .about__desc {
