--- a/src/styles/blocks/wellcome.pcss
+++ b/src/styles/blocks/wellcome.pcss
@@ -2,6 +2,7 @@
   background-image: url(./images/content/mountain_baloon.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  clip-path: polygon(0% 0%, 0% 95%, 50% 100%, 100% 95%, 100% 0%);
 }
 
 .wellcome {
