--- a/src/templates/blocks/skills.pug
+++ b/src/templates/blocks/skills.pug
@@ -11,15 +11,15 @@ ul.skills
                 each skill in item[1]
                     li.skills__item
                         .skill
-                              svg(viewbox="0 0 200 200" preserveAspectRatio="none").skill__shape
-                                defs.defs
-                                  linearGradient(x1="0%" y1="50%" x2="100%" y2="100%")#skill__gradient
-                                    stop(offset="60%" stop-color="#ff9a00").skill__fill--start
-                                    stop(offset="100%" stop-color="#d47d1d").skill__fill--stop
-                                circle(
-                                  r="67" cx="100" cy="100"
-                                ).skill__circle.skill__circle--under
-                                circle(
-                                  r="67" cx="100" cy="100" stroke="url(#skill__gradient)" transform="rotate(-180 100 100)" style=`animation-delay:-${skill[1]}s;`
-                                ).skill__circle.skill__circle--above
-                              .skill__title #{skill[0]}
+                          svg(viewbox="0 0 200 200" preserveAspectRatio="none").skill__shape
+                            defs.defs
+                              linearGradient(x1="0%" y1="50%" x2="100%" y2="100%")#skill__gradient
+                                stop(offset="60%" stop-color="#7600ea").skill__fill--start
+                                stop(offset="100%" stop-color="#4e00ed").skill__fill--stop
+                            circle(
+                              r="67" cx="100" cy="100"
+                            ).skill__circle.skill__circle--under
+                            circle(
+                              r="67" cx="100" cy="100" stroke="url(#skill__gradient)" transform="rotate(-180 100 100)" style=`stroke-dasharray:${4.21*(skill[1])};`
+                            ).skill__circle.skill__circle--above
+                          .skill__title #{skill[0]}
