--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -1,11 +1,17 @@
+.form {
+    width: 50%;
+}
+
 .form__pic {
     width: 30px;
     height: 30px;
     margin-right: 20px;
+    fill: $bg-grey-color;
 }
 
 .form__row{
     display: flex;
+    justify-content: space-between;
     margin-top: 35px;
 
     &--first {
@@ -17,10 +23,20 @@
     display: flex;
     align-items: flex-end;
     margin-right: 90px;
+    border: 1px;
+    border-style: none none solid none;
 
     &:last-child {
         margin-right: 0;
     }
+}
+
+.form__input {
+    border-style: none;
+    background-color: transparent;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.4em;;
 }
 
 .form__label {
@@ -28,8 +44,17 @@
     flex-direction: column;
 }
 
+.form__label-text {
+    padding-left: 35px;
+    margin-bottom: 10px;
+    opacity: .4;
+}
+
 .form__control {
     display: flex;
+    border: 1px;
+    border-style: none;
+    padding: 5px;
 }
 
 .form__button {
