--- a/src/styles/blocks/feedbacks.pcss
+++ b/src/styles/blocks/feedbacks.pcss
@@ -41,6 +41,11 @@
     height: 50px;
     border-radius: 50%;
     border: 1px solid $text-color;
+
+    &:hover {
+        fill: $blue-color;
+        border: 2px solid $blue-color;
+    }
 }
 
 .feedbacks-slider__button--prev {
@@ -55,6 +60,10 @@
     width: 9px;
     height: 9px;
     stroke: $text-color;
+
+    &:hover {
+        fill: $blue-color;
+    }
 }
 
 .feedback {
