--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -29,6 +29,10 @@
         &:last-child{
             margin-right: 0;
         }
+
+        &--active {
+            border: 3px $white-color;
+        }
     }
 
     .nav__link {
