--- a/src/styles/blocks/maincontent.pcss
+++ b/src/styles/blocks/maincontent.pcss
@@ -25,11 +25,19 @@
     display: flex;
     position: absolute;
     bottom: 0px;
+
+    &:hover {
+        fill: $blue-color;
+    }
 }
 
 .main-content__scroll-text {
     font-size: 18px;
     color: $text-color;
+
+    &:hover {
+        color: $blue-color;
+    }
 }
 
 .main-content__scroll-icon {
