--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -7,6 +7,10 @@
     width: 26px;
     height: 26px;
     fill: $text-color;
+
+    &:hover {
+        fill: $blue-color;
+    }
 }
 
 .socials__item {
@@ -33,5 +37,9 @@
         width: 20px;
         height: 20px;
         fill: $bg-grey-color;
+
+        &:hover {
+            fill: $white-color;
+        }
     }
 }
