--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -3,7 +3,10 @@
     min-height: 150px;
     position: fixed;
     width: 100%;
+    height: 150px;
     z-index: 2;
+    display: flex;
+    align-items: center;
 }
 
 .header__container {
