--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -28,13 +28,32 @@
 }
 
 .previews {
-    height: 414px;
+    height: 400px;
     overflow: hidden;
 }
 
 .previews__item {
     width: 180px;
     height: 100px;
+    position: relative;
+
+    &::before {
+        content: '';
+        opacity: 0;
+        background-color: $blue-color;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: 1s;
+    }
+
+    &:hover {
+        &::before {  
+            opacity: .4;
+        }
+    }
 }
 
 .previews__pic {
@@ -47,6 +66,7 @@
     height: 49px;
     width: 49px;
     background-color: $btn-color;
+    transition: .5s;
 
     &--prev {
         transform: rotate(90deg);
@@ -54,6 +74,10 @@
 
     &--next {
         transform: rotate(-90deg);
+    }
+
+    &:hover {
+        background-color: $blue-color;
     }
 }
 
@@ -88,9 +112,16 @@
 .iconed-link {
     display: flex;
     margin-top: 40px;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+    
 }
 
 .iconed-link__icon {
     width: 18px;
     height: 18px;
+    margin-right: 10px;
 }
